Updated schema, to be continued

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Week-5-Optimizing/movies.db
 Week-5-Optimizing/harvard/harvard.db
 Week-5-Optimizing/bank.db
 Final-Project/office_billing.db
+Final-Project/billing.db
