Improved schema, Tested Diagnosis and Procedures tables

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Week-5-Optimizing/harvard/harvard.db
 Week-5-Optimizing/bank.db
 Final-Project/office_billing.db
 Final-Project/billing.db
+Final-Project/diagnosis.csv
+Final-Project/procedures.csv
