more testing done

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ Final-Project/office_billing.db
 Final-Project/billing.db
 Final-Project/diagnosis.csv
 Final-Project/procedures.csv
+Final-Project/test.db
+Final-Project/providers.csv
+Final-Project/patients.csv
+Final-Project/import_test_data.sql
