drafted VIEW and INDEX

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Final-Project/test.db
 Final-Project/providers.csv
 Final-Project/patients.csv
 Final-Project/import_test_data.sql
+Final-Project/claims.csv
